css/style.css
/* ... */
.probootstrap-panel .panel .panel-heading a:hover {
  color: white;
}

.probootstrap-panel .panel .panel-heading a[aria-expanded="true"] {
  color: #0099ff;
}

.probootstrap-panel .panel .panel-heading a[aria-expanded="true"]:after {
  font-family: 'icomoon';
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  content: "\e9e3";
  position: absolute;
  top: 50%;
  right: 0;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
}

.probootstrap-panel .panel .panel-body {
  border: none !important;
}

.probootstrap-panel .panel .panel-body *:last-child {
  margin-bottom: 0;
}

.probootstrap-video {
  position: relative;
}

.probootstrap-video .probootstrap-video-play {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 10;
}

.probootstrap-video .probootstrap-video-play i {
  position: absolute;
  top: 50%;
  left: 50%;
  font-size: 40px;
  color: rgba(255, 255, 255, 0.4);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  -webkit-transition: .3s all ease;
  transition: .3s all ease;
}

.probootstrap-video .probootstrap-video-play:hover i {
  color: white;
}

.probootstrap-video .probootstrap-video-play:active,
.probootstrap-video .probootstrap-video-play:focus {
  outline: none;
}

.slides-text {
  z-index: 99;
  position: relative;
  padding-top: 50%;
  max-width: 600px;
  margin: 0 auto;
}

.slides-text h2 {
  font-weight: 100;
  font-size: 50px;
  color: #ffffff;
  text-transform: uppercase;
}

@media screen and (max-width: 768px) {
  .slides-text h2 {
    font-size: 30px;
  }
}

.slides-text p {
  font-size: 18px;
}

@media screen and (max-width: 768px) {
  .slides-text p {
    font-size: 16px;
  }
}

/* @media screen and (max-width: 768px) {
  .slides-text {
    padding-top: 150px;
  }
}  */

/* @media screen and (max-width: 320px) {
  .slides-text {
    padding-top: 25px;
  }
} */

.probootstrap-card {
  margin-bottom: 30px;
  float: left;
  width: 100%;
}

.probootstrap-card .probootstrap-card-media.icon {
  font-size: 30px;
}

.probootstrap-card .probootstrap-card-media.svg-sm .svg {
  height: 80px;
  margin-bottom: 0;
}

.probootstrap-card .probootstrap-card-media.colored .svg {
  fill: #0099ff;
}

.probootstrap-card .probootstrap-card-text {
  padding: 20px;
}

.probootstrap-card .probootstrap-card-text .probootstrap-card-heading {
  margin-top: 0;
  margin-bottom: 20px;
}

.probootstrap-card .probootstrap-card-text p:last-child {
  margin-bottom: 0;
}

.probootstrap-card.probootstrap-listing {
  margin-bottom: 20px;
  background: #ffffff;
  float: left;
  width: 100%;
  -webkit-transition: .3s all ease-in-out;
  transition: .3s all ease-in-out;
  position: relative;
  top: 0;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-media {
  position: relative;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-media .probootstrap-love {
  width: 40px;
  height: 40px;
  line-height: 40px;
  border-radius: 50%;
  text-align: center;
  position: absolute;
  bottom: -20px;
  right: 15px;
  background: #ffffff;
  -webkit-transition: .3s all ease-in;
  transition: .3s all ease-in;
  display: inline-block;
  zoom: 1;
  -webkit-box-shadow: 0px 6px 8px -6px rgba(0, 0, 0, 0.1);
  box-shadow: 0px 6px 8px -6px rgba(0, 0, 0, 0.1);
}

.probootstrap-card.probootstrap-listing .probootstrap-card-media .probootstrap-love:hover,
.probootstrap-card.probootstrap-listing .probootstrap-card-media .probootstrap-love:focus {
  -webkit-box-shadow: 0px 2px 8px -6px rgba(0, 0, 0, 0.7);
  box-shadow: 0px 2px 8px -6px rgba(0, 0, 0, 0.7);
  background: #0099ff;
  color: #ffffff;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-media .probootstrap-love.active {
  -webkit-box-shadow: 0px 6px 8px -6px rgba(0, 0, 0, 0.1);
  box-shadow: 0px 6px 8px -6px rgba(0, 0, 0, 0.1);
  background: #0099ff;
  color: #ffffff;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-location {
  display: table;
  margin-bottom: 20px;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-location i,
.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-location span {
  display: table-cell;
  vertical-align: top;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-location i {
  position: relative;
  top: 2px;
  width: 25px;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-location span {
  font-weight: 400;
  font-size: 14px;
  color: #bdbdbd;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-category {
  margin-bottom: 5px;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-category span {
  display: inline-block;
  zoom: 1;
  padding: 2px 10px;
  border-radius: 4px;
  color: #ffffff;
  text-transform: uppercase;
  font-size: 10px;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-category.for-sale span {
  background: #0099ff;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-category.for-rent span {
  background: #EE5A5A;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-price {
  font-size: 16px;
  color: #bdbdbd;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-text .probootstrap-listing-price strong {
  font-size: 30px;
  font-weight: 300;
  color: #0099ff;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-extra {
  float: left;
  background: #ffffff;
  width: 100%;
  border-top: 1px solid #f0f0f0;
}

.probootstrap-card.probootstrap-listing .probootstrap-card-extra ul {
  padding: 0 20px;
  margin: 0;
}
/* ... */

